policies/disallow-hostnetwork.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-hostnetwork
spec:
  validationFailureAction: Enforce
  rules:
    - name: hostnetwork
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "HostNetwork is not allowed"
        pattern:
          spec:
            hostNetwork: false
